--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
+    "corsproxy": "^1.5.0",
     "css-loader": "^0.28.4",
     "jquery": "^3.3.1",
     "live-server": "^1.2.0",
