--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "server": "live-server public",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "sass": "node-sass src/styles/styles.scss public/styles.css -w src/styles"
+    "sass": "node-sass src/styles/styles.scss public/styles.css -w src/styles",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +23,7 @@
     "babel-preset-react": "^6.24.1",
     "corsproxy": "^1.5.0",
     "css-loader": "^0.28.4",
+    "express": "^4.16.4",
     "jquery": "^3.3.1",
     "live-server": "^1.2.0",
     "moment": "^2.23.0",
