--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "corsproxy": "^1.5.0",
     "css-loader": "^0.28.4",
     "express": "^4.16.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jquery": "^3.3.1",
     "live-server": "^1.2.0",
     "moment": "^2.23.0",
