--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.0.0",
     "react-modal": "^2.2.2",
     "react-redux": "^6.0.0",
+    "react-select": "^2.2.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
